--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,11 @@ img{
     display: block;
     margin-right: auto;
     margin-left: auto;
-    width: 320px;
+    width: 350px;
     background: white;
-    text-align: center;
     border-radius: 6px;
+    padding-left: 15px;
+    
 }
 
 .numeros{
